add leaflet code

--- a/index.css
+++ b/index.css
@@ -1,4 +1,14 @@
 /* Add CSS styles here! */
 body {
-  font-family: sans-serif;
-}
+	font-family: sans-serif;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+  }
+  
+  #map {
+	  height: 600px;
+	  width: 800px;
+  }
+  
